resources/application/gateway-injection-front-end.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-front-end-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - match:
    - uri:
        exact: "/web"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: web-front-end 
  - match:
    - uri:
        exact: "/web/hello"
    rewrite:
      uri: "/hello"
    route:
    - destination:
        host: web-front-end 
  - match:
    - uri:
        exact: "/web/hello-service"
    rewrite:
      uri: "/hello-service"
    route:
    - destination:
        host: web-front-end
